This code should work, unknown issue
Right now throws typeerror.

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -3,5 +3,16 @@
         - full-calendar/ui-calendar (requires jQuery): https://angular-ui.github.io/ui-calendar/
         - angular-calender: https://github.com/mattlewis92/angular-calendar
 -->
-<p>Calendar will go here</p>
-<div id='calendar'></div>
+
+<div class="row text-center">
+<div class="col-md-4">
+        <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
+</div>
+<br>
+</div>
+<div>
+<mwl-calendar-month-view
+        [viewDate]="viewDate">
+</mwl-calendar-month-view>
+</div>
+
